# pks

sorting_visualizer/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  docker-compose.yml  пкс_отчёт.docx
sorting_visualizer/src/: main.cpp
sorting_visualizer/src/controller/: AnimationController.cpp  AnimationController.h  AppController.cpp  AppController.h  SortingManager.cpp  SortingManager.h
sorting_visualizer/src/model/: ArrayManager.cpp  ArrayManager.h  BubbleSort.cpp  BubbleSort.h  InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  QuickSort.cpp  QuickSort.h  SelectionSort.cpp  SelectionSort.h  SortingAlgorithm.h
sorting_visualizer/src/view/: MainWindow.cpp  MainWindow.h  VisualizationEngine.cpp  VisualizationEngine.h
sorting_visualizer/tests/: ArrayManagerTests.cpp  CMakeLists.txt  Scenarios.cpp  SortingAlgorithmTests.cpp  SortingManagerTests.cpp
